--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>morse code convertor</title>
         <script crossorigin="anonymous" defer="defer" type="application/javascript" src="morse.js"></script>
     </head>
