--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <p> </p>
         <label for="input">Enter morse codes below: <br />
             <textarea name="input" cols="80" rows="10" id="input"
-             placeholder="Enter some Morse code, eg: ... --- ..." 
-             oninput="javascript:input_changed()"></textarea>
+             placeholder="Enter some Morse code, eg: ... --- ..."></textarea>
             <!-- <input type="text" title="input" name="input" id="input" placeholder="... --- ..." value="... --- ..." /> -->
         </label>
         
