play morse audio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body onload="morse_init()">
         <h1>morse code convertor</h1>
         
-        <form action="javascript:convert_morse_to_ascii()">
+        <form action="javascript:play_morse(el_in.value)">
 
         <p> </p>
         <label for="input">Enter morse codes below: <br />
@@ -28,7 +28,7 @@
         <br />
 
         <label for="submit">
-            <input type="submit" id="submit" value="Convert morse to ascii!">
+            <input type="submit" id="submit" value="Play morse code!">
         </label>
 
         </p>
