add links to gists

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <label for="input">Enter morse codes below: <br />
             <textarea name="input" cols="80" rows="10" id="input"
              placeholder="Enter some Morse code, eg: ... --- ..."></textarea>
-            <!-- <input type="text" title="input" name="input" id="input" placeholder="... --- ..." value="... --- ..." /> -->
+      
         </label>
         <br />
         <label for="output" title="output">
             <textarea cols="80" rows="10"  name="output" id="output" title="output" 
              placeholder="[output for Morse codes, or ASCII input]"></textarea> 
-            <!-- <input type="text" name="output" id="output" value="?" title="output" placeholder="output" /> -->
+           
         </label>
 
         <br />
@@ -33,6 +33,13 @@
 
         </p>
         </form>
+
+        <h2> Some other implementations (console programs; no sound) </h2>
+
+        <p>Perl: &nbsp; &nbsp; &nbsp; <a href="https://gist.github.com/tallpeak/eb8f20f91ff326631111d9530d2e75fb">https://gist.github.com/tallpeak/eb8f20f91ff326631111d9530d2e75fb</a></p>
+        <p>Python: &nbsp; <a href="https://gist.github.com/tallpeak/e82af53262aa213bfd8455ee793bcdf4">https://gist.github.com/tallpeak/e82af53262aa213bfd8455ee793bcdf4</a></p>
+        <p>Rust: &nbsp; &nbsp; <a href="https://gist.github.com/tallpeak/7d1af948a02489e0889baeaa6879b0d6">https://gist.github.com/tallpeak/7d1af948a02489e0889baeaa6879b0d6</a></p>
+
 
     </body>
 
