https://search.google.com/search-console/welcome

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="google-site-verification" content="Jl0nTLUfMGx8TgMUn7zQoLTmiET5zDy7_DFVs5trvTY" />
         <title>morse code convertor</title>
         <style>textarea { word-break: break-all; }</style>
         <script crossorigin="anonymous" defer="defer" type="application/javascript" src="morse.js"></script>
