--- a/index.html
+++ b/index.html
@@ -1,52 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="google-site-verification" content="Jl0nTLUfMGx8TgMUn7zQoLTmiET5zDy7_DFVs5trvTY" />
-        <title>morse code convertor</title>
-        <style>textarea { word-break: break-all; }</style>
-        <script crossorigin="anonymous" defer="defer" type="application/javascript" src="morse.js"></script>
-    </head>
-    <body onload="morse_init()">
-        <h1>morse code convertor</h1>
-        
-        <form action="javascript:play_morse(el_in.value, dot_length.value)">
 
-        <p> </p>
-        <label for="input">Enter morse codes below: <br />
-            <textarea name="input" cols="80" rows="10" id="input"
-             placeholder="Enter some Morse code, eg: ... --- ..."></textarea>
-      
-        </label>
-        <br />
-        <label for="output" title="output">
-            <textarea cols="80" rows="10"  name="output" id="output" title="output" 
-             placeholder="[output for Morse codes, or ASCII input]"></textarea> 
-        </label>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="google-site-verification" content="Jl0nTLUfMGx8TgMUn7zQoLTmiET5zDy7_DFVs5trvTY" />
+    <title>morse code convertor</title>
+    <style>
+        textarea {
+            word-break: break-all;
+        }
 
-        <br />
-        Dot length: <label for="dot_length" title="dot length (ms)">
-            <input type="text" name="dot_length" id="dot_length" value="80"  title="dot_length" 
-             placeholder="ms"  maxlength="6" size="4" /> milliseconds
-        </label>
+        #outergrid {
+            /* grid-auto-flow: row; */
+            /* grid-template: repeat(1, 1fr) / repeat(2, 1fr);  */
+            /* gap: 10px; */
+            grid-template-columns: 2;
+            grid-template-rows: 1;
+            display: grid;
+        }
 
-        <br />
+        #ogleft {
+            width: 350px;
+        }
 
-        <label for="submit">
-            <input type="submit" id="submit" value="Play morse code!">
-        </label>
+        #ogright {
+            grid-column-start: 2;
+            width: 350px;
+        }
 
-        </p>
-        </form>
+        #grid {
+            color: ghostwhite;
+            font-style: normal;
+            display: grid;
+            gap: 2px;
+            /* grid-template-rows: 16; */
+            /* grid-template-columns: 4; */
+            grid-template: repeat(8, 1fr) / repeat(8, 1fr);
+            grid-auto-flow: column;
+        }
 
+        .letterMorse {
+            height: 30px;
+            width: 60px;
+            background-color: brown;
+            vertical-align: middle;
+            padding: 6px 3px 0px 6px;
+        }
+
+        #links {
+            text-anchor: start;
+        }
+    </style>
+    <script crossorigin="anonymous" defer="defer" type="application/javascript" src="morse.js"></script>
+</head>
+
+<body onload="morse_init()">
+    <h1>morse code convertor</h1>
+
+    <div id="outergrid">
+
+        <div id="ogleft">
+
+            <form action="javascript:play_morse(el_in.value, dot_length.value)">
+
+                <p> </p>
+                <label for="input">Enter morse codes below: <br />
+                    <textarea name="input" cols="80" rows="10" id="input"
+                        placeholder="[Enter some Morse code, eg: ... --- ...]"></textarea>
+
+                </label>
+                <br />
+                <label for="output" title="output">
+                    <textarea cols="80" rows="10" name="output" id="output" title="output"
+                        placeholder="[output for Morse codes, or ASCII input]"></textarea>
+                </label>
+
+                <br />
+                Dot length: <label for="dot_length" title="dot length (ms)">
+                    <input type="text" name="dot_length" id="dot_length" value="80" title="dot_length" placeholder="ms"
+                        maxlength="6" size="4" /> milliseconds
+                </label>
+
+                <br />
+
+                <label for="submit">
+                    <input type="submit" id="submit" value="Play morse code!">
+                </label>
+
+                </p>
+            </form>
+        </div>
+        <div id="ogright">
+            <br />
+            <br />
+
+            <div id="grid">
+                <!-- <div class="letterMorse">S ...</div>
+            <div class="letterMorse">O ---</div> -->
+            </div>
+
+        </div>
+    </div>
+
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <div id="links">
         <h2> Some other implementations (console programs; no sound) </h2>
 
-        <p>Perl: &nbsp; &nbsp; &nbsp; <a href="https://gist.github.com/tallpeak/eb8f20f91ff326631111d9530d2e75fb">https://gist.github.com/tallpeak/eb8f20f91ff326631111d9530d2e75fb</a></p>
-        <p>Python: &nbsp; <a href="https://gist.github.com/tallpeak/e82af53262aa213bfd8455ee793bcdf4">https://gist.github.com/tallpeak/e82af53262aa213bfd8455ee793bcdf4</a></p>
-        <p>Rust: &nbsp; &nbsp; <a href="https://gist.github.com/tallpeak/7d1af948a02489e0889baeaa6879b0d6">https://gist.github.com/tallpeak/7d1af948a02489e0889baeaa6879b0d6</a></p>
+        <p>Perl: &nbsp; &nbsp; &nbsp; <a
+                href="https://gist.github.com/tallpeak/eb8f20f91ff326631111d9530d2e75fb">https://gist.github.com/tallpeak/eb8f20f91ff326631111d9530d2e75fb</a>
+        </p>
+        <p>Python: &nbsp; <a
+                href="https://gist.github.com/tallpeak/e82af53262aa213bfd8455ee793bcdf4">https://gist.github.com/tallpeak/e82af53262aa213bfd8455ee793bcdf4</a>
+        </p>
+        <p>Rust: &nbsp; &nbsp; <a
+                href="https://gist.github.com/tallpeak/7d1af948a02489e0889baeaa6879b0d6">https://gist.github.com/tallpeak/7d1af948a02489e0889baeaa6879b0d6</a>
+        </p>
 
+    </div>
 
-    </body>
+</body>
 
 </html>
