--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* gap: 10px; */
             grid-template-columns: 2;
             grid-template-rows: 1;
-            display: grid;
+            display: flex;
         }
 
         #ogleft {
@@ -66,13 +66,13 @@
 
                 <p> </p>
                 <label for="input">Enter morse codes below: <br />
-                    <textarea name="input" cols="80" rows="10" id="input"
+                    <textarea name="input" cols="40" rows="10" id="input"
                         placeholder="[Enter some Morse code, eg: ... --- ...]"></textarea>
 
                 </label>
                 <br />
                 <label for="output" title="output">
-                    <textarea cols="80" rows="10" name="output" id="output" title="output"
+                    <textarea cols="40" rows="10" name="output" id="output" title="output"
                         placeholder="[output for Morse codes, or ASCII input]"></textarea>
                 </label>
 
