--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
 
                 <p> </p>
                 <label for="input">Enter morse codes below: <br />
-                    <textarea name="input" cols="40" rows="10" id="input"
+                    <textarea name="input" cols="40" rows="6" id="input"
                         placeholder="[Enter some Morse code, eg: ... --- ...]"></textarea>
 
                 </label>
                 <br />
                 <label for="output" title="output">
-                    <textarea cols="40" rows="10" name="output" id="output" title="output"
+                    <textarea cols="40" rows="6" name="output" id="output" title="output"
                         placeholder="[output for Morse codes, or ASCII input]"></textarea>
                 </label>
 
                 <br />
                 Dot length: <label for="dot_length" title="dot length (ms)">
                     <input type="text" name="dot_length" id="dot_length" value="80" title="dot_length" placeholder="ms"
-                        maxlength="6" size="4" /> milliseconds
+                        maxlength="6" size="4" /> ms
                 </label>
 
                 <br />
@@ -113,6 +113,9 @@
                 <!-- <div class="letterMorse">S ...</div>
             <div class="letterMorse">O ---</div> -->
             </div>
+            <p>
+                QR: <img src="qr.png" alt="QR"/>
+            </p>
 
         </div>
     </div>
@@ -137,7 +140,6 @@
                 href="https://gist.github.com/tallpeak/7d1af948a02489e0889baeaa6879b0d6">https://gist.github.com/tallpeak/7d1af948a02489e0889baeaa6879b0d6</a>
         </p>
 
-        QR: <img src="qr.png"/>
 
     </div>
 
