--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
 
                 </p>
             </form>
+
+            <p>
+                <label for="QR" title="QR">
+                <div style="padding-left: 60px; padding-bottom: 0;">QR</div>
+                <img src="qr.png" alt="QR"/>
+                </label>
+            </p>
+
         </div>
         <div id="ogright">
             <br />
@@ -113,9 +121,6 @@
                 <!-- <div class="letterMorse">S ...</div>
             <div class="letterMorse">O ---</div> -->
             </div>
-            <p>
-                QR: <img src="qr.png" alt="QR"/>
-            </p>
 
         </div>
     </div>
