--- a/morse/index.html
+++ b/morse/index.html
@@ -49,13 +49,36 @@
             grid-auto-flow: column;
         }
 
-        .letterMorse {
+        .hcel {
             height: 22px;
             width: 60px;
             background-color: whitesmoke;
             vertical-align: middle;
             padding: 2px 3px 0px 2px;
             border: 1px solid lightgray;
+        }
+        s-ch {
+            color: black; 
+            font-size: 18px; 
+            font-weight: bold;
+        }
+        m-12 {
+            display: inline-block; 
+            margin-left:12px;
+        }
+        m-3 {
+            display: inline-block; 
+            margin-left:3px;
+        }
+        c-b {
+            font-size: 18px; 
+            margin-left: 1px;
+            color: blue;
+        }
+        c-r {
+            font-size: 18px; 
+            margin-left: 1px;
+            color: red;
         }
 
         #links {
@@ -101,11 +124,10 @@
                 </p>
             </form>
 
-            <p>
-                <label for="QR" title="QR">
+            <p> 
                 <div style="padding-left: 60px; padding-bottom: 0;">QR</div>
-                <img src="qr.png" alt="QR"/>
-                </label>
+                <img src="qr.png" alt="QR" />
+        
             </p>
         </div>
 
