form action needs javascript:

--- a/morse/index.html
+++ b/morse/index.html
@@ -95,7 +95,7 @@
 
         <div id="ogleft">
 
-            <form action="play_morse(el_in.value, dot_length.value)">
+            <form action="javascript:play_morse(el_in.value, dot_length.value)">
 
     
                 <label for="input">Enter morse codes below: <br />
